--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         protocol: tcp
     volumes:
       - config:/config:rw
-      - downloads:/data/downloads:rw
+      - data:/data:rw
       - passwd:/passwd:rw
     environment:
       PUID: ${PUID}
@@ -43,12 +43,12 @@ volumes:
       type: "none"
       o: "bind"
       device: "./config"
-  downloads:
+  data:
     driver: local
     driver_opts:
       type: "none"
       o: "bind"
-      device: "./downloads"
+      device: "./data"
   passwd:
     driver: local
     driver_opts:
