--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -1,12 +1,13 @@
 pid /var/run/nginx/nginx.pid;
-worker_processes auto;
-worker_rlimit_nofile 8192;
+worker_processes 4;
+worker_cpu_affinity auto;
+worker_rlimit_nofile 30000;
 error_log /proc/self/fd/2 info;
 
 load_module /etc/nginx/modules/ngx_http_dav_ext_module.so;
 
 events {
-    worker_connections 2048;
+    worker_connections 4096;
     use epoll;
     multi_accept on;
 }
