--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -1,5 +1,5 @@
 pid /var/run/nginx/nginx.pid;
-worker_processes 4;
+worker_processes auto;
 worker_cpu_affinity auto;
 worker_rlimit_nofile 30000;
 error_log /proc/self/fd/2 info;
