--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,11 @@ variables:
 
 workflow:
   rules:
-    - if:
-      changes:
-        - "**.md"
-        - "**.yml"
-      when: manual
+    - changes:
+      - "**.md"
+      - "**.yml"
+      when: never
+    - when: manual
 
 services:
   - name: docker:dind
