--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,12 @@ variables:
 
 workflow:
   rules:
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH
     - changes:
       - "**.md"
       - "**.yml"
       when: never
-    - when: manual
 
 services:
   - name: docker:dind
