--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,11 @@ workflow:
   rules:
     - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_BRANCH
-    - changes:
+      changes:
       - "**.md"
       - "**.yml"
+      - "**.hcl"
+      - "**.png"
       when: never
 
 services:
