--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -2,23 +2,29 @@ pid /var/run/nginx/nginx.pid;
 worker_processes auto;
 worker_cpu_affinity auto;
 worker_rlimit_nofile 30000;
-error_log /proc/self/fd/2 info;
+error_log /var/log/nginx/error.log info;
 
-load_module /etc/nginx/modules/ngx_http_dav_ext_module.so;
+include /etc/nginx/modules/*.conf;
 
 events {
-    worker_connections 4096;
-    use epoll;
-    multi_accept on;
+	worker_connections 4096;
+	use epoll;
+	multi_accept on;
 }
 
 http {
-    include mime.types;
-    default_type application/octet-stream;
+	include mime.types;
+	default_type application/octet-stream;
+
+	# Logs
+	#log_format  main  '$http_x_forwarded_for - $remote_user [$time_local] "$request" ' '$status $body_bytes_sent "$http_referer" ' '"$http_user_agent" "$remote_addr"';
+	log_format  main  '$remote_addr - [$time_local] "$host" "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
+	access_log /var/log/nginx/access.log main;
+	error_log /var/log/nginx/error.log error;
 
 	# Optimisation
-    aio threads;
-    sendfile on;
+	aio threads;
+	sendfile on;
 	etag off;
 	tcp_nopush on;
 	tcp_nodelay on;
@@ -57,28 +63,24 @@ http {
 		font/opentype
 		image/svg+xml;
 
-    ## Temp folders
-    client_body_temp_path /tmp/nginx 1 2;
-    proxy_temp_path /tmp/nginx-proxy;
-    fastcgi_temp_path /tmp/nginx-fastcgi;
-    uwsgi_temp_path /tmp/nginx-uwsgi;
-    scgi_temp_path /tmp/nginx-scgi;
+	# Headers
+	server_tokens off;
+	more_set_headers 'Server: ';
 
-    ## Handling of IPs in proxied and load balancing situations
-    set_real_ip_from @REAL_IP_FROM@;
-    real_ip_header @REAL_IP_HEADER@;
+	## Temp folders
+	client_body_temp_path /tmp/nginx 1 2;
+	proxy_temp_path /tmp/nginx-proxy;
+	fastcgi_temp_path /tmp/nginx-fastcgi;
+	uwsgi_temp_path /tmp/nginx-uwsgi;
+	scgi_temp_path /tmp/nginx-scgi;
 
-    # Log
-    log_format main '$@LOG_IP_VAR@ - $remote_user [$time_local] '
-                    '"$request" $status $body_bytes_sent '
-                    '"$http_referer" "$http_user_agent"';
-    access_log /proc/self/fd/1 main;
+	## Handling of IPs in proxied and load balancing situations
+	set_real_ip_from @REAL_IP_FROM@;
+	real_ip_header @REAL_IP_HEADER@;
 
-    ## Hide the Nginx version number
-    server_tokens off;
+	## Delay basic auth prompt
+	auth_delay @AUTH_DELAY@;
 
-    ## Delay basic auth prompt
-    auth_delay @AUTH_DELAY@;
-
-    include /etc/nginx/conf.d/*.conf;
+	# Include
+	include /etc/nginx/conf.d/*.conf;
 }
