--- a/rootfs/etc/php81/php-fpm.d/www.conf
+++ b/rootfs/etc/php81/php-fpm.d/www.conf
@@ -1,11 +1,11 @@
 [global]
-pid = /var/run/php-fpm/php-fpm8.pid
+pid = /var/run/php-fpm/php-fpm81.pid
 daemonize = no
-error_log = /proc/self/fd/2
+error_log = /var/log/php81/error.log
 
 [www]
-listen = /var/run/php-fpm/php-fpm8.sock
-access.log = /dev/null
+listen = /var/run/php-fpm/php-fpm81.sock
+access.log = /var/log/php81/access.log
 
 pm = ondemand
 pm.max_children = 300
