--- a/rootfs/etc/nginx/conf.d/webdav.conf
+++ b/rootfs/etc/nginx/conf.d/webdav.conf
@@ -20,7 +20,7 @@ server {
 server {
     listen 127.0.0.1:@WEBDAV_HEALTH_PORT@;
 
-    root @DOWNLOAD_PATH@/complete;
+    root @DOWNLOAD_PATH@;
 
     access_log off;
     error_log /dev/null;
