--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -13,7 +13,8 @@ events {
 }
 
 http {
-	include mime.types;
+	# Mime Type
+	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
 	# Logs
@@ -21,6 +22,9 @@ http {
 	log_format  main  '$remote_addr - [$time_local] "$host" "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
 	access_log /var/log/nginx/access.log main;
 	error_log /var/log/nginx/error.log error;
+	proxy_intercept_errors on;
+	proxy_cache_path /tmp/cache levels=1:2 keys_zone=cache:60m max_size=1G;
+	fastcgi_intercept_errors on;
 
 	# Optimisation
 	aio threads;
